objects/SMM_Implementations__c.object
<CustomObject>
    <fields>
        <fullName>RFP_Policies__c</fullName>
        <label>RFP Policies</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RFP_Sharing__c</fullName>
        <label>RFP Sharing</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Purchased</fullName>
                </value>
                <value>
                    <fullName>Implemented</fullName>
                </value>
                <value>
                    <fullName>Adopted</fullName>
                </value>
                <value>
                    <fullName>Not Purchased</fullName>
                    <default>true</default>
                    <label>Not Purchased</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Region_APAC__c</fullName>
        <label>Region - APAC</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Region_EMEA__c</fullName>
        <label>Region - EMEA</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Region_LATAM__c</fullName>
        <label>Region - LATAM</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Region_NORAM__c</fullName>
        <label>Region - NORAM</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>APAC</fullName>
                </value>
                <value>
                    <fullName>EMEA</fullName>
                </value>
                <value>
                    <fullName>LATAM</fullName>
                </value>
                <value>
                    <fullName>NORAM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Regions_Client_Has_Offices_In__c</fullName>
        <label>Regions Client Has Offices In</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Africa</fullName>
                </value>
                <value>
                    <fullName>Asia</fullName>
                </value>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Europe</fullName>
                </value>
                <value>
                    <fullName>Middle East</fullName>
                </value>
                <value>
                    <fullName>North America</fullName>
                </value>
                <value>
                    <fullName>South America</fullName>
                </value>
                <value>
                    <fullName>UK</fullName>
                </value>
                <value>
                    <fullName>Central America</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Renewal_End_Date__c</fullName>
        <label>Renewal End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Renewal_Month__c</fullName>
        <formula>MONTH(Renewal_End_Date__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Renewal Month</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Renewal_Start_Date__c</fullName>
        <label>Renewal Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Renewal_Year__c</fullName>
        <formula>text(YEAR(Renewal_End_Date__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Renewal Year</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Resource_Assigned__c</fullName>
        <label>Resource Assigned</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>SA</fullName>
                </value>
                <value>
                    <fullName>No SA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Resource_Management__c</fullName>
        <label>Resource Management</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Purchased</fullName>
                </value>
                <value>
                    <fullName>Implemented</fullName>
                </value>
                <value>
                    <fullName>Adopted</fullName>
                </value>
                <value>
                    <fullName>Not Purchased</fullName>
                    <default>true</default>
                    <label>Not Purchased</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SA_Analyst__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigned PSA</label>
        <referenceTo>User</referenceTo>
        <relationshipName>SMM_Implementations3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SA_Annual_Contracted_Hours__c</fullName>
        <inlineHelpText>Annual Agreement Value = # of Hours 
* &lt;$150K = 100 Hrs. 
* $151K-$300K = 300 Hrs. 
* $301K - $500K = 500 Hrs. 
* &gt;$500K = custom 

Child A/c = 20 Hrs</inlineHelpText>
        <label>SA Annual Contracted Hours #</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>20</fullName>
                </value>
                <value>
                    <fullName>100</fullName>
                </value>
                <value>
                    <fullName>150</fullName>
                </value>
                <value>
                    <fullName>300</fullName>
                </value>
                <value>
                    <fullName>500</fullName>
                </value>
                <value>
                    <fullName>832</fullName>
                </value>
                <value>
                    <fullName>1664</fullName>
                </value>
                <value>
                    <fullName>0</fullName>
                    <isActive>false</isActive>
                    <label>0</label>
                </value>
                <value>
                    <fullName>200</fullName>
                    <isActive>false</isActive>
                    <label>200</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SA_Billable_hours_2013__c</fullName>
        <label>SA Billable hours 2013</label>
        <summarizedField>Time_Stamp__c.Time_Spent__c</summarizedField>
        <summaryFilterItems>
            <field>Time_Stamp__c.Date__c</field>
            <operation>lessOrEqual</operation>
            <value>12/31/2013</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Time_Stamp__c.Please_select_your_role__c</field>
            <operation>equals</operation>
            <value>Client Success Manager</value>
        </summaryFilterItems>
        <summaryForeignKey>Time_Stamp__c.SMM_Implementations__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>SA_Billable_hours_2014__c</fullName>
        <label>SA Billable hours 2014</label>
        <summarizedField>Time_Stamp__c.Time_Spent__c</summarizedField>
        <summaryFilterItems>
            <field>Time_Stamp__c.Date__c</field>
            <operation>lessOrEqual</operation>
            <value>12/31/2014</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Time_Stamp__c.Date__c</field>
            <operation>greaterThan</operation>
            <value>12/31/2013</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Time_Stamp__c.Please_select_your_role__c</field>
            <operation>equals</operation>
            <value>Client Success Manager</value>
        </summaryFilterItems>
        <summaryForeignKey>Time_Stamp__c.SMM_Implementations__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>SA_Billable_hours_2015__c</fullName>
        <label>SA Billable hours 2015</label>
        <summarizedField>Time_Stamp__c.Time_Spent__c</summarizedField>
        <summaryFilterItems>
            <field>Time_Stamp__c.Date__c</field>
            <operation>greaterThan</operation>
            <value>12/31/2014</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Time_Stamp__c.Please_select_your_role__c</field>
            <operation>equals</operation>
            <value>Client Success Manager</value>
        </summaryFilterItems>
        <summaryForeignKey>Time_Stamp__c.SMM_Implementations__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>SA_Billable_hours__c</fullName>
        <label>SA Billable hours</label>
        <summarizedField>Time_Stamp__c.Time_Spent__c</summarizedField>
        <summaryFilterItems>
            <field>Time_Stamp__c.Time_Spent__c</field>
            <operation>notEqual</operation>
            <value></value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Time_Stamp__c.Please_select_your_role__c</field>
            <operation>equals</operation>
            <value>Client Success Manager, Strategic Account Analyst</value>
        </summaryFilterItems>
        <summaryForeignKey>Time_Stamp__c.SMM_Implementations__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>SA_Consultant_Email__c</fullName>
        <inlineHelpText>Please enter current SA Email Address</inlineHelpText>
        <label>SA Consultant Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>SA_Contracted_Hours__c</fullName>
        <inlineHelpText>Annual Agreement Value = # of Hours
·         &lt;$150K = 100 Hrs.
·         $151K-$300K = 300 Hrs.
·         $301K - $500K = 500 Hrs.
·         &gt;$500K = custom

Child A/c = 20 Hrs</inlineHelpText>
        <label>SA Annual Contracted Hours</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SA_Guiding_Onboarding__c</fullName>
        <inlineHelpText>Accounts with NO Implementation Hours</inlineHelpText>
        <label>SA Guiding Onboarding</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SA_Hours_Execution_Variance__c</fullName>
        <formula>SA_Contracted_Hours__c - SA_Billable_hours_2017__c</formula>
        <label>SA Annual Execution Variance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SA_Load_Factor_Number__c</fullName>
        <label>SA Load Factor</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SA_Load_Factor__c</fullName>
        <formula>Case( SA_Load_Score__c, 
0,0, 
1,0, 
2,0, 
3,0, 
4,0, 
5,0, 
6,0, 
7,0, 
8,0, 
9,0, 
10,0, 
11,0, 
12,0, 
13,0, 
14,0, 
15,1, 
16,1, 
17,1, 
18,1, 
19,1, 
20,1, 
21,1, 
22,1, 
23,1, 
24,1, 
25,1, 
26,2, 
27,2, 
28,2, 
29,2, 
30,2, 
31,2, 
32,2, 
33,2, 
34,2, 
35,2, 
36,3, 
37,3, 
38,3, 
39,3, 
40,3, 
41,3, 
42,3, 
43,3, 
44,3, 
45,3, 
46,4, 
47,4, 
48,4, 
49,4, 
50,4, 
51,4, 
52,4, 
53,4, 
54,4, 
55,4, 
56,5, 
57,5, 
58,5, 
59,5, 
60,5, 
61,5, 
62,5, 
63,5, 
64,5, 
65,5, 
66,6, 
67,6, 
68,6, 
69,6, 
70,6, 
71,6, 
72,6, 
73,6, 
74,6, 
75,6, 
76,6, 
77,6, 
78,6, 
79,6, 
80,7, 
81,7, 
82,7, 
83,7, 
84,7, 
85,7, 
86,7, 
87,7, 
88,7, 
89,7, 
90,7, 
91,7, 
92,7, 
93,7, 
94,7, 
95,7, 
96,7, 
97,7, 
98,7, 
99,7, 
100,7, 
111,8, 
112,8, 
113,8, 
114,8, 
115,8, 
116,8, 
117,9, 
118,9, 
119,9, 
120,9, 
121,9, 
122,9, 
123,9, 
124,9, 
125,9, 
126,9, 
127,9, 
128,9, 
129,9, 
130,9, 
131,9, 
132,9, 
0)</formula>
        <label>SA Load Factor</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SA_Load_Score_Number__c</fullName>
        <label>SA Load Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SA_Load_Score__c</fullName>
        <formula>+Case(Communication_frequency__c,"Daily",50,"Weekly",25,"Monthly",10,"Less than Monthly",0,0)

+Case(Admin_Strength__c,"Weak",20,"Average",10,"Strong",0, "NA",0,0)

+Case(of_Modules_SA__c,"4/4+",30,"2-3",15,"1",5,0)

+Case(Support_Level__c,"Designated",0,"Partially Dedicated",116,"Dedicated",132,0)</formula>
        <label>SA Load Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SA_Non_Billable_Hours__c</fullName>
        <label>SA Non Billable Hours</label>
        <summarizedField>Time_Stamp__c.Time_Spent_Non_Billable_Hours__c</summarizedField>
        <summaryFilterItems>
            <field>Time_Stamp__c.Time_Spent_Non_Billable_Hours__c</field>
            <operation>notEqual</operation>
            <value></value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Time_Stamp__c.Please_select_your_role__c</field>
            <operation>equals</operation>
            <value>Client Success Manager, SA Analyst</value>
        </summaryFilterItems>
        <summaryForeignKey>Time_Stamp__c.SMM_Implementations__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>SA_Non_Billable_hours_2014__c</fullName>
        <label>SA Non Billable hours 2014</label>
        <summarizedField>Time_Stamp__c.Time_Spent_Non_Billable_Hours__c</summarizedField>
        <summaryFilterItems>
            <field>Time_Stamp__c.Date__c</field>
            <operation>greaterOrEqual</operation>
            <value>1/1/2014</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Time_Stamp__c.Date__c</field>
            <operation>lessThan</operation>
            <value>1/1/2015</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Time_Stamp__c.Please_select_your_role__c</field>
            <operation>equals</operation>
            <value>Client Success Manager</value>
        </summaryFilterItems>
        <summaryForeignKey>Time_Stamp__c.SMM_Implementations__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>SA_Non_Billable_hours_2015__c</fullName>
        <label>SA Non Billable hours 2015</label>
        <summarizedField>Time_Stamp__c.Time_Spent_Non_Billable_Hours__c</summarizedField>
        <summaryFilterItems>
            <field>Time_Stamp__c.Date__c</field>
            <operation>greaterThan</operation>
            <value>12/31/2014</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Time_Stamp__c.Please_select_your_role__c</field>
            <operation>equals</operation>
            <value>Client Success Manager</value>
        </summaryFilterItems>
        <summaryForeignKey>Time_Stamp__c.SMM_Implementations__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>SA_Non_Billable_hours_2016__c</fullName>
        <label>SA Non Billable hours 2016</label>
        <summarizedField>Time_Stamp__c.Time_Spent_Non_Billable_Hours__c</summarizedField>
        <summaryFilterItems>
            <field>Time_Stamp__c.Date__c</field>
            <operation>greaterOrEqual</operation>
            <value>1/1/2016</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Time_Stamp__c.Date__c</field>
            <operation>lessThan</operation>
            <value>1/1/2017</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Time_Stamp__c.Please_select_your_role__c</field>
            <operation>equals</operation>
            <value>Client Success Manager</value>
        </summaryFilterItems>
        <summaryForeignKey>Time_Stamp__c.SMM_Implementations__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>SA_Projected_Hours__c</fullName>
        <formula>CASE(SA_Load_Factor_Number__c,
8,384,
7,192,
6,87,
5,65,
4,34,
3,14,
2,3,
1,0,
0,0,
0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SA Projected Hours</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SA_Remaining_Contracted_Hours__c</fullName>
        <formula>Value(Text( SA_Annual_Contracted_Hours__c )) - SA_Billable_hours__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SA Remaining Contracted Hours</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SA_Start_Date__c</fullName>
        <inlineHelpText>Date when the SA started managing the account.</inlineHelpText>
        <label>SA Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SA_Weekly_Hours__c</fullName>
        <formula>CASE( SA_Annual_Contracted_Hours__c , '500', 5.3,'300',2.25,'200',1.6,'150',7.4,'100',0.09,'20',0.03,'0',0.05,NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SA Weekly Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SA_currently_working_on_templates__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SA currently working on templates</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SMM_Adoption_Status__c</fullName>
        <label>SMM Adoption Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Purchased</fullName>
                </value>
                <value>
                    <fullName>Implemented</fullName>
                </value>
                <value>
                    <fullName>Adopted</fullName>
                </value>
                <value>
                    <fullName>Not Purchased</fullName>
                    <default>true</default>
                    <label>Not Purchased</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SMm_License_Type__c</fullName>
        <label>SMM License Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Professional</fullName>
                </value>
                <value>
                    <fullName>Enterprise</fullName>
                </value>
                <value>
                    <fullName>Not Purchased</fullName>
                </value>
                <value>
                    <fullName>MRF only</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SSO__c</fullName>
        <label>SSO</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Purchased</fullName>
                </value>
                <value>
                    <fullName>Implemented</fullName>
                </value>
                <value>
                    <fullName>Adopted</fullName>
                </value>
                <value>
                    <fullName>Not Purchased</fullName>
                    <default>true</default>
                    <label>Not Purchased</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>S_A__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Client Success Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>SMM_Implementations2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sales_Owner__c</fullName>
        <formula>Text(Account__r.AM_Event__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Salesforce__c</fullName>
        <label>Salesforce</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Purchased</fullName>
                </value>
                <value>
                    <fullName>Implemented</fullName>
                </value>
                <value>
                    <fullName>Adopted</fullName>
                </value>
                <value>
                    <fullName>Not Purchased</fullName>
                    <default>true</default>
                    <label>Not Purchased</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Scoped_Status__c</fullName>
        <label>Scoped Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Scoped</fullName>
                </value>
                <value>
                    <fullName>Scoping Due</fullName>
                </value>
                <value>
                    <fullName>Closed Lost</fullName>
                </value>
                <value>
                    <fullName>Closed Won</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Score__c</fullName>
        <formula>CASE(TEXT(Email_Frequency__c ),"Multiple Daily",25,"Daily",15,"Weekly",5,0)+ 
CASE(TEXT(Project_Urgency__c ),"Rushed/Condensed",25,"Expedited",15,"Standard",5,0)+ 
CASE(TEXT(IMP_Training_calls_per_Week__c ),"4+",30,"2-3",20,"1",10,0)+ 
CASE(TEXT(Workflow_Complexity__c ),"Multiple Workflows",30,"Complex",20,"Moderate",10,"Simple",3,0)+ 
CASE(TEXT(Current_Implementation_Phase__c ),"Beginning",15,"MidPoint",5,"End",1,0)+ 
CASE(TEXT(of_Modules_IMP__c ),"6+",30,"4-5",20,"2-3",10,"1",5,0)+ 
CASE(TEXT(Client_Proficiency__c ) ,"Weak",15,"Mediocre",10,"Strong",5,0)+ 
CASE(TEXT(of_Event_Templates__c ),"10+",20,"6 – 10",15,"1 – 5",10,0)+ 
CASE(TEXT(Support_Assigned__c ),"Yes",4,"No",10,0)+ 
CASE(TEXT(Implementation_Status__c ),"Active",10,"Assigned",20,0)+ 
CASE(TEXT(Client_Temp__c ),"White Glove",7,"Yellow",5,"Red",10,0)+ 
CASE(TEXT(ACV__c ),"&gt;$500k",5,"$150k - $499k",4,"$75k - $150k",3,"$35k-$75k",2,"&lt;$35k",1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IMP Load Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Separate_System_Admins_based_on_Region__c</fullName>
        <inlineHelpText>Select 'NA' when the client is in Implementation. Move to 'No' or 'Yes' Post-Imp.</inlineHelpText>
        <label>Separate System Admin by Region/Division</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>NA in Formal imp</fullName>
                    <label>NA</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Service_Tier__c</fullName>
        <formula>Account__r.Service_Tier__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Service Tier</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Share_of_wallet_Tier_Max__c</fullName>
        <formula>Account__r.Share_of_Wallet_Tier_Max__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Share of wallet Tier $(Max)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Share_of_wallet__c</fullName>
        <formula>Account__r.Share_of_Wallet_Client__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Share of wallet</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Special_Projects__c</fullName>
        <label>Special Projects</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Success_Experience_Event_Cloud__c</fullName>
        <formula>Text(Account__r.Success_Experience__c)</formula>
        <label>Success Experience (Event Cloud)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Support_Assigned__c</fullName>
        <label>Support Assigned</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Support_Level__c</fullName>
        <inlineHelpText>Designated: for multiple accounts; Partially Dedicated: 50% of time towards X account; Dedicated: 100% of time allocated towards 1 client</inlineHelpText>
        <label>Support Level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Designated</fullName>
                </value>
                <value>
                    <fullName>Partially Dedicated</fullName>
                </value>
                <value>
                    <fullName>Dedicated</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Survey__c</fullName>
        <label>Inquisium</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Purchased</fullName>
                </value>
                <value>
                    <fullName>Implemented</fullName>
                </value>
                <value>
                    <fullName>Adopted</fullName>
                </value>
                <value>
                    <fullName>Not Purchased</fullName>
                    <default>true</default>
                    <label>Not Purchased</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TAM_Of_Users__c</fullName>
        <label>TAM # Of Users</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TAM_RFP__c</fullName>
        <label>TAM RFPs</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TAM_RFPs__c</fullName>
        <formula>TAM_RFPs_from_Africa__c + 
TAM_RFPs_from_Asia__c + 
TAM_RFPs_from_Australia__c + 
TAM_RFPs_from_Central_America__c + 
TAM_RFPs_from_Europe__c + 
TAM_RFPs_from_Middle_East__c + 
TAM_RFPs_from_North_America__c + 
TAM_RFPs_from_South_America__c + 
TAM_RFPs_from_UK__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TAM RFPs</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TAM_RFPs_from_Africa__c</fullName>
        <label>TAM RFPs from Africa</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TAM_RFPs_from_Asia__c</fullName>
        <label>TAM RFPs from Asia</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TAM_RFPs_from_Australia__c</fullName>
        <label>TAM RFPs from Australia</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TAM_RFPs_from_Central_America__c</fullName>
        <label>TAM RFPs from Central America</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TAM_RFPs_from_Europe__c</fullName>
        <label>TAM RFPs from Europe</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TAM_RFPs_from_Middle_East__c</fullName>
        <label>TAM RFPs from Middle East</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TAM_RFPs_from_North_America__c</fullName>
        <label>TAM RFPs from North America</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TAM_RFPs_from_South_America__c</fullName>
        <label>TAM RFPs from South America</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TAM_RFPs_from_UK__c</fullName>
        <label>TAM RFPs from UK</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TAM_RNs__c</fullName>
        <label>TAM RNs</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Temperature_Date__c</fullName>
        <label>Temperature Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Temperature_Notes__c</fullName>
        <inlineHelpText>Should be concise, clear statement of the problem as it relates to the temp reason. Include any proactive measures (with timelines) SA is taking to resolve situation &amp; any related open cases/case #’s.</inlineHelpText>
        <label>Temperature Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Test__c</fullName>
        <label>Test</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Third_Parties_used__c</fullName>
        <label>Third Parties used?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Third_Party_Partners__c</fullName>
        <label>Third Party Partners</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>To_be_transitioned__c</fullName>
        <label>To be transitioned</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>